# TDD-and-OOP-with-C

./: CMakeLists.txt  README.md
doc/: TodoList.txt
include/: Dollar.h  new.h  object.h
mocks/: CMakeLists.txt
src/: CMakeLists.txt
src/Money/: money.c
tests/: CMakeLists.txt  RunAllTests.cpp
tests/Money/: money_test.cpp
